Fixed UI Overlaps on Laptop and Mobile Mode

--- a/src/Components/AboutPage/aboutPage.scss
+++ b/src/Components/AboutPage/aboutPage.scss
@@ -48,23 +48,15 @@ $secondary_Yellow_Color: #fff55a;
     flex-direction: column;
     align-items: center;
     overflow: hidden;
-    .ScrollDownBar {
-      width: 99.9%;
-      height: 3rem;
-      display: flex;
-      justify-content: center;
-      position: absolute;
-      bottom: 0;
-      background-color: inherit;
-      .iconWrapper {
-        cursor: pointer;
-        width: 3%;
+
+    .iconWrapper {
+      cursor: pointer;
+      width: 3%;
+      height: 100%;
+      img {
+        width: 100%;
         height: 100%;
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: contain;
-        }
+        object-fit: contain;
       }
     }
     .lowerSection {
@@ -151,6 +143,9 @@ $secondary_Yellow_Color: #fff55a;
         flex-direction: column;
         align-items: center;
         padding-bottom: 2rem;
+        @media only screen and (orientation: landscape) {
+          margin-top: 5rem !important;
+        }
         @include media(">tablet") {
           margin-top: 2rem;
           margin-bottom: 4rem !important;
@@ -374,6 +369,9 @@ $secondary_Yellow_Color: #fff55a;
     }
   }
   .aboutPageBoyImg__Wrapper {
+    @media screen and (max-height: 563px) {
+      top: 0% !important;
+    }
     width: 100%;
     height: 100%;
     // position: fixed !important;
