--- a/src/Components/DesignPage/designPage.scss
+++ b/src/Components/DesignPage/designPage.scss
@@ -80,6 +80,9 @@ $bgColor: #e7eeed;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
+        @media only screen and (orientation: landscape) {
+          margin-top: 2rem !important;
+        }
         @include media("<=tablet") {
           height: 6rem;
           margin-top: -4rem;
